--- a/k8s/deploy/video-service-deploy.yaml
+++ b/k8s/deploy/video-service-deploy.yaml
@@ -16,6 +16,17 @@ spec:
     spec:
       imagePullSecrets:
         - name: ghcr-secret
+      initContainers:
+        - name: wait-for-redis
+          image: busybox
+          command:
+            - sh
+            - -c
+            - |
+              until nc -z redis 6379; do
+                echo "Waiting for Redis..."
+                sleep 2
+              done
       containers:
         - name: backend-video-service
           image: ghcr.io/bipasapradhan/video-service:latest
