--- a/k8s/deploy/websocket-deploy.yaml
+++ b/k8s/deploy/websocket-deploy.yaml
@@ -14,6 +14,17 @@ spec:
     spec:
       imagePullSecrets:
         - name: ghcr-secret
+      initContainers:
+        - name: wait-for-redis
+          image: busybox
+          command:
+            - sh
+            - -c
+            - |
+              until nc -z redis 6379; do
+                echo "Waiting for Redis..."
+                sleep 2
+              done
       containers:
         - name: websocket
           image: ghcr.io/bipasapradhan/websocket-service:latest
