changed things for deployment

--- a/k8s/deploy/websocket-deploy.yaml
+++ b/k8s/deploy/websocket-deploy.yaml
@@ -33,3 +33,5 @@ spec:
           envFrom:
             - configMapRef:
                 name: redis-config
+            - secretRef:
+                name: jwt-secret
