added in wait scripts

--- a/k8s/deploy/thumbnail-service-deploy.yaml
+++ b/k8s/deploy/thumbnail-service-deploy.yaml
@@ -16,6 +16,19 @@ spec:
     spec:
       imagePullSecrets:
         - name: ghcr-secret
+
+      initContainers:
+      - name: wait-for-redis
+        image: busybox
+        command:
+          - sh
+          - -c
+          - |
+            until nc -z redis 6379; do
+              echo "Waiting for Redis..."
+              sleep 2
+            done
+            
       containers:
         - name: thumbnail-worker
           image: ghcr.io/bipasapradhan/thumbnail-service:latest
